# Scalers

./: .dockerignore  .env.example  .gitattributes  .gitignore  .ops-bp-test-2.md  .ops-branch-protection-test.md  CLAUDE-HANDOFF.md  CLAUDE.md  DEMO-BUILD-PLAN.md  DEMO-UI-V2-CONTRACT.md  Dockerfile.engine  NMH11-ENG4-HANDOFF.md  README.md  pyproject.toml  render.yaml
engine/: .env.example  README.md  bootstrap_db.py  contentrun.py  deploy_migrate.py  main.py  metrics.py  observability.py  phase1_slice.py  pyproject.toml  requirements-dev.txt
engine/actions/: __init__.py  audit.py  publish.py  seed_demo.py  store.py
engine/archetypes/: __init__.py  classify.py  compose.py  registry.py  router.py  spec.py
engine/autonomy/: __init__.py  aggregate.py  confidence.py  decision.py  judges.py  jury.py  produce.py  rubric.py  store.py
engine/cells/: __init__.py  ai_flagger.py  base.py  content_brief.py  copywriter.py  critic.py  draft.py  funnel_architect.py  humanize.py  ideate.py  identity_guard.py  media_validators.py  metrics.py  offer_guard.py  personalization_guard.py  post_draft.py  post_schemas.py  repair.py  reply.py  select_angle.py  skills.py  strategy.py  validators.py
engine/compliance/: __init__.py  sms_gate.py
engine/config/: README.md  __init__.py  loader.py  schema.py
engine/config/packs/: demo_studio.toml  ink-studio.toml  ladies8391.toml  skindesign.toml
engine/connectors/: __init__.py  base.py  demo.py  fb.py  gmail.py  ig.py  mail_message.py  sms.py  smtp_mail.py
engine/engagement/: __init__.py  handler.py  ingest.py  simulate.py  triage.py
engine/evals/: __init__.py  calibration.py  config.py  demo_cells.py  gate.py  gates.py  metrics.py  predictors.py  run_gate.py  scoring.py  smoke_gold_set.py
engine/harness/: __init__.py  config.py  graph.py  hold.py  nodes.py  recovery.py  router.py  runstore.py  serde.py  spans.py  state.py
engine/kb/: README.md  __init__.py  embedding.py  grounding.py  load_practitioner_wisdom.py  schema.py  store.py  voice.py
engine/kb/corpus/: README.md  __init__.py  build_practitioner_wisdom.py  practitioner_wisdom.jsonl
engine/kb/corpus/sources/: skills-dos-donts.md  winning-strategies-kb.md
engine/memory/: __init__.py  store.py
engine/obsapi/: __init__.py  db.py  mappers.py  mount.py  repo.py  schema.py  sse.py  types.py
engine/ops/: __init__.py  archive.py  db_guard.py  redirects.py  tenancy.py  tenant_guard.py
engine/outreach/: README.md  __init__.py  personalization.py  policy.py  schema.py  sequence.py  suppression.py  verifier.py
engine/proactive/: __init__.py  detectors.py  followup_source.py  orchestrator.py  schedule.py  schedule_ledger.py  worker.py
engine/research/: README.md  __init__.py  adapter.py  agent.py  pipeline.py  protected_traits.py  router.py  safety.py  sources_store.py
engine/research/content/: README.md  __init__.py  adapter.py  budget.py  items.py  mock.py
engine/research/providers/: __init__.py  _http.py  anthropic_research.py  exa.py  firecrawl.py  fixture.py  foreplay.py  meta_ad_library.py
engine/scripts/: backfill_artwork_tags.py  redteam_grade.py  redteam_run.py
engine/sideeffects/: README.md  __init__.py  artifact_media.py  boundary.py  capture.py  dispatcher.py  keys.py  posting.py  provider.py  staging.py
engine/sideeffects/tests/: conftest.py  mock_connector.py  test_exactly_once.py  test_keys.py
engine/skills/copywriter/: SKILL.md  VERIFICATION.md  VETTING.md
engine/skills/copywriter/references/: hook-cta-patterns.md
engine/skills/human-tone/: SKILL.md  VETTING.md
engine/skills/reply/: SKILL.md  VERIFICATION.md  VETTING.md
engine/studio/: __init__.py  agui.py  appointment_import.py  artifact_files.py  artifacts.py  artist_memory.py  artists_directory.py  artwork_flow.py  artwork_memory.py  artwork_select.py  artwork_vision.py  audio_ingest.py  blueprint_store.py  brand_study.py  campaign_blueprint.py  campaign_examples_store.py  campaign_generator.py  campaign_memory.py  campaign_plan_store.py  campaign_runner.py  campaign_send.py  campaign_spec_store.py  campaign_state.py  channel_router.py  chat.py  chat_store.py  client_import.py  competitor_discovery.py  competitor_flow.py  competitor_intel.py  console_api.py  conversation_import.py  conversations.py  csv_profiler.py  customer_dal.py  customer_research.py  customer_research_agent.py  demo_seed.py  documents.py  dossier.py  (+39 more)
engine/studio/adapters/: __init__.py  artist_source.py  artwork_source.py  lead_source.py  message_source.py
engine/studio/data/: flash_tattoos_catalog.csv
engine/studio/mcp/: __init__.py  audit.py  errors.py  principal.py  ratelimit.py  sanitize.py  server.py  tools.py  validation.py
engine/studio/seed_docs/: ladies-first-brand-playbook.md
engine/studio/skillpacks/: __init__.py
engine/suppression/: __init__.py  ledger.py
engine/team/: __init__.py  orchestrator.py  registry.py  store.py
engine/tenants/: __init__.py  store.py
engine/tests/: conftest.py  mock_connector.py  test_4hj_ig_fb_idem_collision.py  test_a9m9_content_fixtures.py  test_a9m9_e2e_slice.py  test_action_evidence.py  test_actions_archive_pg.py  test_actions_publish.py  test_actions_store_pg.py  test_agent_status_honesty.py  test_ai_flagger.py  test_anthropic_research.py  test_api.py  test_appointment_import.py  test_archetypes.py  test_artifacts_integration.py  test_artifacts_store.py  test_artwork_brief_relevance.py  test_artwork_memory_pg.py  test_artwork_pause.py  test_artwork_vision.py  test_audio_ingest.py  test_autonomy_decision.py  test_autonomy_store.py  test_autonomy_store_pg.py  test_brand_study.py  test_calibration_gate.py  test_calibration_gate_pg.py  test_campaign_blueprint.py  test_campaign_examples.py  test_campaign_generator.py  test_campaign_memory.py  test_campaign_reconciliation.py  test_campaign_send.py  test_campaign_state.py  test_capture_pg.py  test_cell_error_hardening.py  test_channel_router.py  test_channel_routing_integration.py  test_checkpointer.py  (+216 more)
engine/tests/data/: adversarial_reply_corpus.json
engine/tests/fixtures/: ladies_first_brand_playbook.md
(+353 files in other folders)
