[project]
name = "scalers-engine"
version = "0.1.0"
description = "Scalers deterministic marketing harness (Phase 1)."
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
include = ["engine*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["engine"]
# Side-effect-boundary tests need the local Postgres (docker stack) up.
# Override the DSN with SCALERS_TEST_DSN if your ports differ.
