[project]
name = "scalers-engine"
version = "0.1.0"
description = "Scalers engine — Control + Intelligence + Knowledge core (Python)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    # Typed LLM cells (HARN-02). slim core + anthropic provider only; the
    # framework itself is provider-agnostic and tests use the built-in
    # Test/Function models, so no other provider extras are pulled in.
    "pydantic-ai-slim[anthropic]==2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.uv]
package = false
