[project]
name = "scalers-engine"
version = "0.1.0"
description = "Scalers engine — Control + Intelligence + Knowledge core (Python)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    # Load API keys from a gitignored .env into the process environment at
    # startup (SEC/INFRA) so Pydantic-AI reads ANTHROPIC_API_KEY natively.
    # Imported directly by engine/harness/config.py, so declared explicitly
    # rather than relied on as a pydantic-settings transitive.
    "python-dotenv>=1.0",
    # Typed LLM cells (HARN-02). slim core + anthropic provider only; the
    # framework itself is provider-agnostic and tests use the built-in
    # Test/Function models, so no other provider extras are pulled in.
    "pydantic-ai-slim[anthropic]==2.0.0",
    # AG-UI surface for the Campaign Studio (P3.1): wraps the Studio Host + role
    # cells in an AGUIAdapter with editable campaign-plan shared state (StateDeps)
    # and an approval gate (DeferredToolRequests). Mounted at POST /studio/agui.
    "pydantic-ai-slim[ag-ui]==2.0.0",
    # Control spine (HARN-01/03/05): LangGraph StateGraph + Postgres checkpointer.
    "langgraph>=0.2",
    # Thin portal (HARN-01): FastAPI /healthz + webhook ingress + SSE out.
    "fastapi>=0.110",
    "uvicorn>=0.29",
    # Prometheus /metrics endpoint (13u) — feeds the 3bu Grafana dashboard.
    "prometheus-client>=0.20",
    # Exactly-once side-effect boundary (HARN-04): Postgres outbox/ledger. Used
    # unconditionally by engine/sideeffects, so it is a core dependency. This is
    # the single source of truth for psycopg: `pool` is included here for the
    # durable checkpointer/run-store (the [postgres] extra), so the extra does
    # not re-declare psycopg.
    "psycopg[binary,pool]>=3.2",
    "strawberry-graphql[fastapi]>=0.320.0",
    # Real LOCAL semantic embeddings for the KB (KNOW-01/02). fastembed runs
    # BAAI/bge-small-en-v1.5 as a quantized ONNX graph (onnxruntime, no torch),
    # 384-dim — a DROP-IN for the deterministic stub (column stays vector(384)).
    # Imported lazily by kb/embedding.py; hermetic/offline runs select the
    # SHA-256 stub via $SCALERS_EMBEDDER=deterministic, so the eval gate stays
    # network-free without uninstalling this.
    "fastembed>=0.4",
]

[project.optional-dependencies]
# Durable Postgres checkpointer + run-state store (HARN-03). Imported lazily;
# not required for the in-memory demo or the test suite. psycopg (incl. the
# `pool` extra) comes from the core dependency above — not re-declared here.
postgres = [
    "langgraph-checkpoint-postgres>=2.0",
]
# Self-hosted Langfuse traces/evals. Imported lazily by engine/observability.py;
# the engine no-ops when it is absent or unconfigured, so it is not needed for
# the demo or the test suite.
observability = [
    "langfuse>=2.0",
]
# DeepEval — OPTIONAL, NON-GATING (EVAL-03 / rvy.8). The per-commit calibration/
# accuracy gates compute ECE/P-R/F1/kappa hermetically in-repo (evals/metrics.py)
# so the gate stays deterministic + offline within rvy.7's CI budget, and the
# eval_metric store is the authoritative gating source per the rvy.1 ADR. DeepEval
# is for the periodic/trend lane (recompute the same metrics, richer reports); it
# is never imported on the gating path, so CI runs without it installed.
eval = [
    "deepeval>=1.0",
]
# Cross-family JURY Ollama juror (AUTON-01 / 4jx.2). The local open-model juror talks
# to Ollama's OpenAI-compatible endpoint, so it needs pydantic-ai's openai provider.
# OPT-IN + lazily imported (autonomy/judges.py:_model_for): the core engine + the
# deterministic test panel (FunctionModel) never require it; install for a live Ollama
# panel. The same provider also serves any future GPT juror (keys permitting).
jury-ollama = [
    "pydantic-ai-slim[openai]==2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    # FastAPI TestClient transport.
    "httpx>=0.27",
    # Lint + format + coverage (test/CI scaffold, dhv.5). Mirrors requirements-dev.txt.
    "ruff>=0.6",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
# Integration tests need a live Postgres (set ENGINE_DATABASE_URL). They are
# selected by marker so the unit job runs DB-free (`-m "not integration"`) and a
# dedicated CI job with a pgvector service runs them (`-m integration`). This is
# what stops real-PG / async-checkpointer defects from hiding under InMemorySaver.
markers = [
    "integration: requires a live Postgres via ENGINE_DATABASE_URL (pgvector service in CI)",
]

[tool.uv]
package = false

# ---------------------------------------------------------------------------
# Lint + format (ruff). `ruff format` is Black-compatible (same code style), so
# a single tool covers both the "ruff" and "black" toolchain the stack calls for.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["harness", "cells", "config", "tests"]

[tool.ruff.lint]
# Starting baseline = ruff's DEFAULT rule set (pyflakes F + pycodestyle E4/E7/E9),
# which the existing engine already satisfies. Adopting the linter must not force
# a large reformat diff across the in-flight Phase-1 branches, so stricter rules
# (isort I, pyupgrade UP, bugbear B) and `ruff format --check` are a documented
# follow-up the team opts into. `ruff check` (real-bug rules) is the hard gate.

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Coverage threshold — STUB. A floor, not a target; raise `fail_under` as the
# engine matures (Phase 2+).
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["harness", "cells", "main", "observability"]
branch = true

[tool.coverage.report]
fail_under = 50
show_missing = true
